[project]
name = "llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "llama-index>=0.14.18",
    "llama-index-core>=0.14.18",
    "llama-index-embeddings-bedrock>=0.8.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-anthropic>=0.11.1",
    "llama-index-llms-bedrock-converse>=0.14.2",
    "llama-index-llms-openai>=0.7.2",
    "llama-index-postprocessor-cohere-rerank>=0.8.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pypdf>=6.9.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
